--- a/exercise1/docker-compose.yaml
+++ b/exercise1/docker-compose.yaml
@@ -1,7 +1,8 @@
 version: "3.7"
 services:
   nginx:
-    image: nginx:alpine
+    build:
+      context: ./nginx
     depends_on:
       - php
     restart: always
@@ -23,13 +24,16 @@ services:
         target: /var/www/html
 
     ports:
-      - "80:8080"
-      - "443:8443"
+      - "8080:8080"
+      - "8443:8443"
+
+    command: ["./wait-for", "php:9000", "--", 'nginx', '-g', 'daemon off;']
 
   php:
     depends_on:
       - mariaDB
-    image: wordpress:fpm-alpine
+    build:
+      context: ./wordpress
     restart: always
     environment:
       WORDPRESS_DB_HOST: mariaDB:3306
@@ -44,6 +48,8 @@ services:
 
     secrets:
       - mysql_password
+
+    command: ["/wait-for", "mariaDB:3306", "--", "docker-entrypoint.sh", "php-fpm"]
 
   mariaDB:
     image: mariadb:latest
