--- a/exercise1/nginx/conf.d/nginx.conf
+++ b/exercise1/nginx/conf.d/nginx.conf
@@ -8,7 +8,7 @@ server {
   server_name localhost;
 
   # Redirect all HTTP requests to HTTPS with a 301 Moved Permanently response.
-  return 301 https://nginx:8443$request_uri;
+  return 301 https://$host:8443$request_uri;
 }
 
 server {
