--- a/exercise1/wordpress/Dockerfile
+++ b/exercise1/wordpress/Dockerfile
@@ -1,5 +1,3 @@
-FROM nginx:alpine
+FROM wordpress:fpm-alpine
 ADD https://raw.githubusercontent.com/eficode/wait-for/master/wait-for /wait-for
 RUN chmod 500 /wait-for
-
-
